CHATS_SIT/force-app/main/default/objects/T_YEAR_HOL__c.object
<CustomObject>
    <description>Year Holiday</description>
    <!--enableChangeDataCapture>false</enableChangeDataCapture-->
    <fields>
        <fullName>CDE_HOL__c</fullName>
        <description>CDE_HOL</description>
        <label>Holiday ID</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_PAYMENT_Q13_1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_YEAR__c</fullName>
        <description>Year</description>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DTE_HOL__c</fullName>
        <description>Holiday Date</description>
        <label>Holiday Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_OBSERVED_HOL__c</fullName>
        <description>Observed Holiday</description>
        <label>Observed Holiday</label>
        <type>Date</type>
    </fields>
    <label>Holiday Date</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Holiday Dates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>year_len_4</fullName>
        <active>true</active>
        <description>Validating to check year accepts only 4 digits</description>
        <errorConditionFormula>LEN( TEXT( CDE_YEAR__c ) ) &lt;&gt; 4</errorConditionFormula>
        <errorDisplayField>CDE_YEAR__c</errorDisplayField>
        <errorMessage>Year must be 4 digits</errorMessage>
    </validationRules>
</CustomObject>