CHATS_SIT/force-app/main/default/objects/T_YEAR_HOL__c/validationRules/year_len_4.validationRule-meta.xml
<ValidationRule>
    <fullName>year_len_4</fullName>
    <active>true</active>
    <description>Validating to check year accepts only 4 digits</description>
    <errorConditionFormula>LEN( TEXT( CDE_YEAR__c ) ) &lt;&gt; 4</errorConditionFormula>
    <errorDisplayField>CDE_YEAR__c</errorDisplayField>
    <errorMessage>Year must be 4 digits</errorMessage>
</ValidationRule>