CHATS_SIT/force-app/main/default/objects/T_YEAR_HOL__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CDE_HOL__c</columns>
    <columns>DTE_OBSERVED_HOL__c</columns>
    <columns>CDE_YEAR__c</columns>
    <columns>DTE_HOL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CDE_YEAR__c</field>
        <operation>equals</operation>
        <value>2026,2027,2028</value>
    </filters>
    <label>All</label>
</ListView>